# web3_homework

./: .gitignore  .gitmodules
backend_homework/: .gitignore  Makefile  README.md  go.mod  go.sum  main.go  run_demo.sh  注释说明.md
backend_homework/.claude/: settings.local.json
backend_homework/config/: config.go
backend_homework/contracts/: foundry.toml
backend_homework/examples/: block_monitor.go  区块监控程序说明.md
backend_homework/homework3-solana/: .gitignore  README.md  TESTING_REPORT.md  go.mod  go.sum  任务完成报告.md
backend_homework/homework3-solana/programs/token-swap/: Cargo.toml
backend_homework/homework3-solana/programs/token-swap/src/: lib.rs
backend_homework/tx/: transaction.go
contract_homework/homework_1/: .gitignore  README.md  foundry.toml
contract_homework/homework_2/: .gitignore  Makefile  README.md  foundry.toml  go.mod  go.sum  main.go  start_frontend.sh
go_home_work/: base_1.go  base_2.go  go.mod
go_home_work/.claude/: settings.local.json
go_home_work/go_base_homework_1/: base_1.go  go.mod
go_home_work/go_base_homework_2/: base_2.go  go.mod
go_home_work/go_base_homework_3/: base_3.go  go.mod  gorm_homework.go  sqlx_homework.go
go_home_work/go_base_homework_4/: README.md  blog-api.postman_collection.json  database.go  go.mod  go.sum  handlers.go  jwt.go  main.go  middleware.go  (+4 more)
solidity_study_and_homework/: .gitignore  ABIDecode.sol  CrowFound.sol  DutchAuction.sol  EnglishAuction.sol  MultiDelegatecall.sol  TimeLock.sol  create2.sol  erc20_test.sol  funcSelector.sol  gas_comparison.sol  kill.sol  multi_sig_wallet.sol  test.sol
(+164 files in other folders)
